Because of the faulty line-height on body corrected now, we need to specify a specific one here, otherwise the links are too close together.

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -299,6 +299,7 @@ span.title {
     width: auto;
     width: 18em;
     margin-left: 2em;
+    line-height: 2.2em;
 }
 
 @media all and (max-width: 480px) {
